# python3-minidsp

./: .minidsp.py.swp  README.md  minidsp.py  pyproject.toml
minidsp/: __init__.py  board_2x4hd.py  board_ddrc24.py  transport_echo.py  transport_usbhid.py
