[tool.poetry]
name = "minidsp"
version = "0.1.0"
description = "Python bindings to a MiniDSP unit"
authors = ["Matt Feifarek <matt.feifarek@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.0"
argparse = "*"
hidapi = "*"

[tool.poetry.scripts]
minidsp = 'minidsp.cli:main'

[tool.poetry.dev-dependencies]
ipython = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
